--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,12 @@ body {
 
 ul {
     max-height: 700px;
+    min-height: 700px;
     overflow-y: auto;
+}
+
+ul li {
+    border-top: 1px solid rgb(218, 218, 218);
 }
 
 li:hover {
