[UPD] BONUS - Created functions to view last access, function to random replay (created array of answers) and function to view last message in li contacts

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ ul li {
 
 li:hover {
     cursor: pointer;
-    background-color: rgb(207, 207, 207);
+    background-color: #E6E6E6;
 }
 
 .message-sent {
@@ -94,5 +94,5 @@ li:hover {
 
 
 .clicked {
-    background-color: rgb(207, 207, 207);
+    background-color: #E6E6E6;
 }
