--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
 .col-8 img {
     border-radius: 100%;
     width: 50px;
+    height: 50px;
+
 }
 
 .col-8 {
@@ -77,6 +79,12 @@ li:hover {
     min-width: 180px;
     max-width: 600px;
     background-color: white;
+}
+
+.dropdown-menu,
+.dropdown-toggle {
+    overflow-y: auto;
+    min-height: 50px;
 }
 
 /* STYLE CLASSES */
